--- a/src/app/pages/seccionpacientes/seccionpacientes.component.html
+++ b/src/app/pages/seccionpacientes/seccionpacientes.component.html
@@ -7,7 +7,7 @@
                 <div class="float-button">
                     <img appMarco src={{item.data.imagen}} alt="">
                 </div>
-            <h5 style="padding: 0; margin: 0;">{{item.data.nombre}} {{item.data.apellido}}</h5>
+            <h5 style="padding: 0; margin: 0;">{{item.data | pnombrecompleto}}</h5>
             </div>
         </div>
     </div>
