--- a/src/app/components/historiaclinica/historiaclinica.component.html
+++ b/src/app/components/historiaclinica/historiaclinica.component.html
@@ -2,7 +2,7 @@
   <div class="col-6" *ngFor="let item of historiasPaciente, let i = index">
 
     <div class="card bg-light mb-3" id={{i}} style="width: 20rem;">
-      <div class="card-header">{{usuario.nombre}} {{usuario.apellido}}</div>
+      <div class="card-header">{{usuario.nombre | pnombrecompleto}}</div>
       <div class="card-body">
         <h5 class="card-title">{{item.fecha}}</h5>
         <div class="row">
