--- a/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
+++ b/src/app/components/turnos/turnosespecialista/turnosespecialista.component.html
@@ -19,11 +19,11 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let item of turnosDelEspecialista">
-                        <td>{{item.data.especialidad}} </td>
-                        <td>{{item.data.paciente}} </td>
-                        <td>{{item.data.fecha}} </td>
+                        <td>{{item.data.especialidad | pcapitalze }} </td>
+                        <td>{{item.data.paciente | pcapitalze }} </td>
+                        <td>{{item.data.fecha | pcapitalze }} </td>
                         <td>{{item.data.horario}}hs </td>
-                        <td>{{item.data.estado}} </td>
+                        <td>{{item.data.estado | pcapitalze }} </td>
                         <td *ngIf="item.data.estado == 'pendiente'" > <button (click)="cancelarTurno(item)" type="button" class="btn btn-outline-danger">Cancelar</button> </td>
                         <td *ngIf="item.data.estado == 'pendiente'" ><button (click)="rechazarTurno(item)" type="button" class="btn btn-outline-warning">Rechazar</button></td>
                         <td *ngIf="item.data.estado == 'pendiente'" ><button (click)="aceptarTurno(item)" type="button" class="btn btn-outline-success">Aceptar</button></td>
