--- a/src/app/pages/miperfil/miperfil.component.html
+++ b/src/app/pages/miperfil/miperfil.component.html
@@ -3,7 +3,7 @@
     <div class="miContenedor p-3 mb-5" style="padding: 50px">
 
         <div class="row" align="center">
-            <h1 appDtitulo style="font-family: 'Bebas Neue';">{{auth.currentUser.nombre}} {{auth.currentUser.apellido}}</h1>
+            <h1 appDtitulo style="font-family: 'Bebas Neue';">{{auth.currentUser | pnombrecompleto}}</h1>
         </div>
         
 
@@ -60,7 +60,7 @@
                     <div class="float-button" (click)="descargarTurnos(item)">
                         <img src={{item.data.imagen}} alt="">
                     </div>
-                <h5 style="padding: 0; margin: 0;">{{item.data.nombre}} {{item.data.apellido}}</h5>
+                <h5 style="padding: 0; margin: 0;">{{item.data | pnombrecompleto}} </h5>
                 </div>
             </div>
         </div>
