especifico donde estan los pipes y directivas

--- a/src/app/components/graficos/graficos.component.html
+++ b/src/app/components/graficos/graficos.component.html
@@ -64,9 +64,14 @@
 
         </tbody>
     </table>
+    <div class="row" *ngIf="verLogs">
+        <div class="col-3">
+            <button style="height: 100%; width: 100%;" class="bttn-unite bttn-md bttn-primary" (click)="exportAsXLSX()">Descargar logs</button>
+        </div>
+    </div>
 
 </div>
-
+<!-- 
 <div class="row">
     <div class="col-6">
         <input type="date" class="form-control" id="dateInicio" #dateInicio value="2021-11-10" min="2021-10-25" max="2021-11-11">
@@ -74,7 +79,7 @@
     <div class="col-6">
         <input type="date" class="form-control" id="dateFin" #dateFin value="2021-11-10" min="2021-10-25" max="2021-11-11">
     </div>
-</div>
+</div> -->
 
 <!-- <button (click)="seleccionaLapso()">PEPE</button> -->
   
