--- a/src/app/components/graficos/graficos.component.html
+++ b/src/app/components/graficos/graficos.component.html
@@ -66,14 +66,13 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of logs">
+            <tr *ngFor="let item of logs | paginate: { itemsPerPage: 10, currentPage: p }">
                 <td scope="row">{{item.correo}}</td>
-               
                 <td> {{item.fecha | date: 'dd/MM/yyyy HH:mm:ss'}}</td>
             </tr>
-
         </tbody>
     </table>
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
 
 </div>
 
