--- a/src/app/pages/miperfil/miperfil.component.html
+++ b/src/app/pages/miperfil/miperfil.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 slide-in-top	" style="max-width: 520px;">
+<div class="container mt-5 slit-in-horizontal	" style="max-width: 520px;">
 
     <div class="miContenedor p-3 mb-5" style="padding: 50px">
 
