--- a/src/app/pages/seccionpacientes/seccionpacientes.component.css
+++ b/src/app/pages/seccionpacientes/seccionpacientes.component.css
@@ -1,24 +1,24 @@
-.float-cont{
-    /* position:fixed; */
-    display: flex;
-    gap: 15px;
-    margin: 15px;
-    /* bottom:40px; */
-    /* left:40px; */
+.float-cont {
+  /* position:fixed; */
+  display: flex;
+  gap: 15px;
+  margin: 15px;
+  /* bottom:40px; */
+  /* left:40px; */
 
 }
 
-.float-button{
+.float-button {
   position: relative;
-  width:60px;
-  height:60px;
+  width: 60px;
+  height: 60px;
   box-shadow: 2px 4px 3px #999;
   border: 0;
-  border-radius:50px;
+  border-radius: 50px;
   overflow: hidden;
 }
 
-.float-button img{
+.float-button img {
   position: absolute;
   top: 0;
   left: 0;
@@ -29,8 +29,8 @@
 }
 
 .slide-in-top {
-	-webkit-animation: slide-in-top 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: slide-in-top 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  -webkit-animation: slide-in-top 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-in-top 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 /* ----------------------------------------------
@@ -45,27 +45,59 @@
  * animation slide-in-top
  * ----------------------------------------
  */
- @-webkit-keyframes slide-in-top {
+@-webkit-keyframes slide-in-top {
   0% {
     -webkit-transform: translateY(-1000px);
-            transform: translateY(-1000px);
+    transform: translateY(-1000px);
     opacity: 0;
   }
+
   100% {
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
+
 @keyframes slide-in-top {
   0% {
     -webkit-transform: translateY(-1000px);
-            transform: translateY(-1000px);
+    transform: translateY(-1000px);
     opacity: 0;
   }
+
   100% {
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     opacity: 1;
   }
+}
+
+
+body {
+  background-color: #BBDEFB;
+  padding: 10px 10px 0 10px
+}
+
+/*Estilos del header */
+.container .table thead tr th {
+  background-color: #28b78d;
+  /* padding: 30px 10px; */
+  border: none;
+  color: white
+}
+
+/*Colores de las columnas 1 y 1 */
+td:nth-child(2n+1) {
+  background-color: #EDE7F6
+}
+
+td:nth-child(2n) {
+  background-color: white
+}
+
+/* Tamaño de la fuente de las celdas */
+.container .table tbody tr td {
+  padding: 5px 5px 5px 5px;
+  font-weight: 500
 }
